// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageContent /> render matches snapshot while loading 1`] = `
<Loader
  isLoading={true}
  showSpinner={true}
>
  <PageContentstyles__StyledPageContent>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
         - 
        Pure Escapes
      </title>
    </HelmetWrapper>
    <PageContentstyles__PageContainer>
      <PageContentstyles__Columns>
        <PageContentstyles__ColumnLeft>
          <Sidebar
            isOpen={false}
            links={Array []}
          >
            <Markdown />
          </Sidebar>
        </PageContentstyles__ColumnLeft>
        <PageContentstyles__ColumnRight>
          <PageContentstyles__PageContentData>
            <Markdown />
          </PageContentstyles__PageContentData>
        </PageContentstyles__ColumnRight>
      </PageContentstyles__Columns>
    </PageContentstyles__PageContainer>
  </PageContentstyles__StyledPageContent>
</Loader>
`;

exports[`<PageContent /> render matches snapshot with markdown 1`] = `
<Loader
  isLoading={false}
  showSpinner={true}
>
  <PageContentstyles__StyledPageContent>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
         - 
        Pure Escapes
      </title>
    </HelmetWrapper>
    <PageContentstyles__PageContainer>
      <PageContentstyles__Columns>
        <PageContentstyles__ColumnLeft>
          <Sidebar
            isOpen={false}
            links={Array []}
          >
            <Markdown />
          </Sidebar>
        </PageContentstyles__ColumnLeft>
        <PageContentstyles__ColumnRight>
          <PageContentstyles__PageContentData>
            <Markdown>
              ### some data
            </Markdown>
          </PageContentstyles__PageContentData>
        </PageContentstyles__ColumnRight>
      </PageContentstyles__Columns>
    </PageContentstyles__PageContainer>
  </PageContentstyles__StyledPageContent>
</Loader>
`;

exports[`<PageContent /> render matches snapshot with markdown 2`] = `
<Loader
  isLoading={false}
  showSpinner={true}
>
  <PageContentstyles__StyledPageContent>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        foo
         - 
        Pure Escapes
      </title>
    </HelmetWrapper>
    <PageContentstyles__PageContainer>
      <PageContentstyles__Columns>
        <PageContentstyles__ColumnLeft>
          <Sidebar
            isOpen={false}
            links={Array []}
            title="foo"
          >
            <Markdown />
          </Sidebar>
        </PageContentstyles__ColumnLeft>
        <PageContentstyles__ColumnRight>
          <PageContentstyles__PageContentData>
            <Markdown>
              ### some data
            </Markdown>
          </PageContentstyles__PageContentData>
        </PageContentstyles__ColumnRight>
      </PageContentstyles__Columns>
    </PageContentstyles__PageContainer>
  </PageContentstyles__StyledPageContent>
</Loader>
`;

exports[`<PageContent /> render matches snapshot with markdown 3`] = `
<Loader
  isLoading={false}
  showSpinner={true}
>
  <PageContentstyles__StyledPageContent>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        foo
         - 
        Pure Escapes
      </title>
    </HelmetWrapper>
    <PageContentstyles__PageContainer>
      <PageContentstyles__Columns>
        <PageContentstyles__ColumnLeft>
          <Sidebar
            isOpen={false}
            links={Array []}
            title="foo"
          >
            <Markdown>
              - a link
            </Markdown>
          </Sidebar>
        </PageContentstyles__ColumnLeft>
        <PageContentstyles__ColumnRight>
          <PageContentstyles__PageContentData>
            <Markdown>
              ### some data
            </Markdown>
          </PageContentstyles__PageContentData>
        </PageContentstyles__ColumnRight>
      </PageContentstyles__Columns>
    </PageContentstyles__PageContainer>
  </PageContentstyles__StyledPageContent>
</Loader>
`;

exports[`<PageContent /> render matches snapshot with markdown 4`] = `
<Loader
  isLoading={false}
  showSpinner={true}
>
  <PageContentstyles__StyledPageContent>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        foo
         - 
        Pure Escapes
      </title>
    </HelmetWrapper>
    <PageContentstyles__PageHero
      image="http://foo"
    />
    <PageContentstyles__PageContainer>
      <PageContentstyles__Columns>
        <PageContentstyles__ColumnLeft>
          <Sidebar
            isOpen={false}
            links={Array []}
            title="foo"
          >
            <Markdown>
              - a link
            </Markdown>
          </Sidebar>
        </PageContentstyles__ColumnLeft>
        <PageContentstyles__ColumnRight>
          <PageContentstyles__PageContentData>
            <Markdown>
              ### some data
            </Markdown>
          </PageContentstyles__PageContentData>
        </PageContentstyles__ColumnRight>
      </PageContentstyles__Columns>
    </PageContentstyles__PageContainer>
  </PageContentstyles__StyledPageContent>
</Loader>
`;
